# WebsiteAccessibilityMonitor

./: .gitignore  Cargo.toml  LICENSE  Program.cs  ProgramLite.cs  README.md  SiteMonitor.csproj  SiteMonitorLite.csproj  Start.bat  StartLite.bat  access.py
.github/workflows/: dotnet.yml
src/: lib.rs
